# ai-feishu-assistant

./: .env.example  .gitignore  Procfile  README.md  main_ws.py  pyproject.toml  requirements.txt  test_create_doc.py  test_reaction.py  vercel.json
api/: index.py
core/: agent.py  feishu.py  ppt_generator.py
